{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 69,
  "lineage": "8a4c3b83-bee9-b543-76e3-015d56ccbe25",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "petclinic-aws_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dba74fe671dd16f2",
            "association_id": "eipassoc-0d60e18e2ce7e68b8",
            "domain": "vpc",
            "id": "eipalloc-0dba74fe671dd16f2",
            "instance": "i-0c7e83af35e27806a",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0bb5befb443e10b99",
            "private_dns": "ip-10-0-46-212.eu-west-3.compute.internal",
            "private_ip": "10.0.46.212",
            "public_dns": "ec2-13-39-89-18.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.39.89.18",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2-petclinic",
            "aws_security_group.allow_ssh_http_https",
            "aws_subnet.subnet-uno",
            "aws_vpc.test-env-petclinic",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-petclinic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f3e5b7f6aedc9c0f",
            "arn": "arn:aws:ec2:eu-west-3:885801475464:instance/i-0c7e83af35e27806a",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c7e83af35e27806a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "petclinic_terraform_deploy",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bb5befb443e10b99",
            "private_dns": "ip-10-0-46-212.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.46.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0617103ebd01f5a0d",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-079633452dc1453f2",
            "tags": {
              "Name": "ec2-petclinic"
            },
            "tags_all": {
              "Name": "ec2-petclinic"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03f2397c2572a9a06"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_http_https",
            "aws_subnet.subnet-uno",
            "aws_vpc.test-env-petclinic",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-env-petclinic-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:885801475464:internet-gateway/igw-0784caea8f16d8062",
            "id": "igw-0784caea8f16d8062",
            "owner_id": "885801475464",
            "tags": {
              "Name": "test-env-petclinic-gw"
            },
            "tags_all": {
              "Name": "test-env-petclinic-gw"
            },
            "vpc_id": "vpc-02657c51cd603e00f"
          },
          "dependencies": [
            "aws_vpc.test-env-petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-test-env-petclinic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:885801475464:route-table/rtb-0573349399c120913",
            "id": "rtb-0573349399c120913",
            "owner_id": "885801475464",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0784caea8f16d8062",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-env-route-table--petclinic"
            },
            "tags_all": {
              "Name": "test-env-route-table--petclinic"
            },
            "timeouts": null,
            "vpc_id": "vpc-02657c51cd603e00f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test-env-petclinic-gw",
            "aws_vpc.test-env-petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0becfc0cea2dd9bfc",
            "route_table_id": "rtb-0573349399c120913",
            "subnet_id": "subnet-079633452dc1453f2"
          },
          "dependencies": [
            "aws_internet_gateway.test-env-petclinic-gw",
            "aws_route_table.route-table-test-env-petclinic",
            "aws_subnet.subnet-uno",
            "aws_vpc.test-env-petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:885801475464:security-group/sg-03f2397c2572a9a06",
            "description": "Allow ssh http https inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f2397c2572a9a06",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "petclinic-sg",
            "name_prefix": "",
            "owner_id": "885801475464",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02657c51cd603e00f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-env-petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-uno",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:885801475464:subnet/subnet-079633452dc1453f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079633452dc1453f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "885801475464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-uno-petclinic"
            },
            "tags_all": {
              "Name": "subnet-uno-petclinic"
            },
            "vpc_id": "vpc-02657c51cd603e00f"
          },
          "dependencies": [
            "aws_vpc.test-env-petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-env-petclinic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:885801475464:vpc/vpc-02657c51cd603e00f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08c0bad0b818dd9a5",
            "default_route_table_id": "rtb-0f54d4127dd36a309",
            "default_security_group_id": "sg-06153e829180cf30a",
            "dhcp_options_id": "dopt-097db8c555b47ad05",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02657c51cd603e00f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f54d4127dd36a309",
            "owner_id": "885801475464",
            "tags": {
              "Name": "test-env-petclinic"
            },
            "tags_all": {
              "Name": "test-env-petclinic"
            }
          }
        }
      ]
    }
  ]
}